syntax = "proto3";                       
package linux_Monitor;                  

// 定义一个消息用于描述网络接口的性能指标
message NetInfo {
    string name = 1;                     // 网络接口的名称，如"eth0"
    float send_rate = 2;                 // 发送速率，单位可能是MB/s或GB/s
    float rcv_rate = 3;                  // 接收速率，单位可能是MB/s或GB/s
    float send_packets_rate = 4;         // 发送数据包的速率，单位是包/秒
    float rcv_packets_rate = 5;          // 接收数据包的速率，单位是包/秒
}
